--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-database.driver = org.h2.Driver
-database.connection = jdbc:h2:./h2db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-database.user = test
-database.password = test
+database.driver = org.postgresql.Driver
+database.connection = jdbc:postgresql://localhost/meta_server
+database.user = yana
+database.password = 5555
