ResolveUserServlet was added

--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,6 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
@@ -107,6 +104,9 @@
                         <manifest>
                             <mainClass>org.example.Main</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
                     </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
