--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,3 +1,3 @@
-redis.host = localhost
-redis.port = 6379
 redis.sessionTimeOutSek = 36000
+redis.url = redis://:12345678@10.0.0.34:6379/0
+#redis.url = redis://localhost:6379/0
